--- a/lib/skaz_web/components/layouts/root.html.heex
+++ b/lib/skaz_web/components/layouts/root.html.heex
@@ -11,7 +11,7 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-white dark:bg-stone-800 antialiased">
+  <body class="bg-white dark:bg-stone-800 dark:text-stone-100 antialiased">
     <%= @inner_content %>
   </body>
 </html>
